--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         Joining us
                     </h3>
                     <p>
-                        As soon as the countime strikes 0, it's simple, just click the watch button. If you are having trouble got to https://zoom.us/ and click "JOIN A MEETING" in the header bar. Use Meeting ID <span class="bold">613 960 3509</span>. Password is <span class="bold">lovebirds</span>
+                        As soon as the countdown strikes 0, it's simple, just click the watch button. If you are having trouble got to https://zoom.us/ and click "JOIN A MEETING" in the header bar. Use Meeting ID 613 960 3509. Password is lovebirds
                     </p>
                 </div>
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
