fixing some typos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         Joining us
                     </h3>
                     <p>
-                        As soon as the countdown strikes 0, it's simple, just click the watch button. If you are having trouble got to https://zoom.us/ and click "JOIN A MEETING" in the header bar. Use Meeting ID 613 960 3509. Password is lovebirds
+                        As soon as the timer strikes 0, it's simple, just click the watch button. If you are having trouble go to https://zoom.us/ and click "JOIN A MEETING" in the header bar. Use Meeting ID 613 960 3509 -- Password is lovebirds
                     </p>
                 </div>
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
@@ -51,7 +51,7 @@
                         Where are we?
                     </h3>
                     <p>
-                        The vows are on our property at Orcas Island. You might see people mingling about, the ceremony will start at 2:30pm.
+                        The vows are at our property on Orcas Island. You might see people mingling about, the ceremony will start at 2:30pm.
                     </p>
                 </div>
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
@@ -60,7 +60,7 @@
                         Pour a drink
                     </h3>
                     <p>
-                        Go ahead, pop a bottle and relax wherever you are at. We will be toasting you, us, and love after the vows
+                        Go ahead, pop a bottle and relax wherever you are. We will be toasting you, us, and love, after the vows.
                     </p>
                 </div>
             </div>
