--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="content">
             <h2 class="content-head is-center">Welcome to our live stream wedding. Isn't 2020 something!?</h2>
     
-            <div class="pure-g">
+            <div class="pure-g desc-content">
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
     
                     <h3 class="content-subhead">
@@ -44,21 +44,6 @@
                     <p>
                         As soon as the timer strikes 0, it's simple, just click the watch button. If you are having trouble go to https://zoom.us/ and click "JOIN A MEETING" in the header bar. Use Meeting ID 613 960 3509 -- Password is lovebirds
                     </p>
-                </div>
-                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
-                    <h3 class="content-subhead">
-                        <i class="fa fa-mobile"></i>
-                        Where are we?
-                    </h3>
-                    <p>
-                        The vows are at our property on Orcas Island. You might see people mingling about, the ceremony will start at 2:30pm.
-                    </p>
-                </div>
-                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
-                    <h3 class="content-subhead">
-                        <i class="fa fa-th-large"></i>
-                        Pour a drink
-                    </h3>
                     <p>
                         Go ahead, pop a bottle and relax wherever you are. We will be toasting you, us, and love, after the vows.
                     </p>
